Reworked Controllers and routes

--- a/views/index.twig
+++ b/views/index.twig
@@ -5,6 +5,8 @@
     <title>Fullstack Party</title>
   </head>
   <body>
-    <h1>hello!</h1>
+    <form action="{{ path_for('login') }}" method="post">
+      <button type="submit">Login with Github</button>
+    </form>
   </body>
 </html>
