--- a/views/issues.twig
+++ b/views/issues.twig
@@ -1,2 +1,3 @@
-Issues Page
-{{test}}
+<form class="logout" action="{{ path_for('logout') }}" method="post">
+  <button type="submit" name="logout">Logout</button>
+</form>
