Added Multi-Curl requests for Issues

--- a/views/index.twig
+++ b/views/index.twig
@@ -6,7 +6,7 @@
   </head>
   <body>
     <form action="{{ path_for('login') }}" method="post">
-      <button type="submit">Login with Github</button>
+      <button type="submit" style="background-color:green;margin-left:auto;margin-right:auto;display:block;margin-top:22%;margin-bottom:0%">Login with Github</button>
     </form>
   </body>
 </html>
