Hotfix for config values not being read

--- a/views/issues.twig
+++ b/views/issues.twig
@@ -17,6 +17,15 @@
                 </br>
                 #{{ issue.id }} opened {{ issue.created }} ago by <a href="{{ issue.profile }}">{{ issue.user }}</a></br>
             </button>
+            <input type="hidden" value="{{ issue.title }}" name="title" />
+            <input type="hidden" value="{{ issue.id }}" name="id" />
+            <input type="hidden" value="{{ issue.state }}" name="state" />
+            <input type="hidden" value="{{ issue.user }}" name="user" />
+            <input type="hidden" value="{{ issue.profile }}" name="profile" />
+            <input type="hidden" value="{{ issue.created }}" name="created" />
+            <input type="hidden" value="{{ issue.avatar }}" name="avatar" />
+            <input type="hidden" value="{{ issue.comments }}" name="comments" />
+            <input type="hidden" value="{{ issue.body }}" name="body" />
       </form>
     {% endfor %}
 {% else %}
