--- a/views/issues.twig
+++ b/views/issues.twig
@@ -25,6 +25,7 @@
             <input type="hidden" value="{{ issue.created }}" name="created" />
             <input type="hidden" value="{{ issue.avatar }}" name="avatar" />
             <input type="hidden" value="{{ issue.comments }}" name="comments" />
+            <input type="hidden" value="{{ issue.commentsUrl }}" name="commentsUrl" />
             <input type="hidden" value="{{ issue.body }}" name="body" />
       </form>
     {% endfor %}
@@ -49,6 +50,7 @@
             <input type="hidden" value="{{ issue.created }}" name="created" />
             <input type="hidden" value="{{ issue.avatar }}" name="avatar" />
             <input type="hidden" value="{{ issue.comments }}" name="comments" />
+            <input type="hidden" value="{{ issue.commentsUrl }}" name="commentsUrl" />
             <input type="hidden" value="{{ issue.body }}" name="body" />
 
       </form>
